--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.profiles.active=db
+weixin.baseUrl=https://api.weixin.qq.com/
+mp.appid=wx2938bf4d8010cb83
+mp.secret=4f828c88867f3e15a64385bebd61d594
